tests/invalid/tryemptystatements.nim
# Count: 1
# Negative count: 0

try:
  echo "hello"
except:
  discard
